[gd_scene load_steps=25 format=3 uid="uid://o4e6y18bwqeo"]

[ext_resource type="Script" path="res://src/enemies/attack/bringer_of_death_spell.gd" id="1_g20cl"]
[ext_resource type="Texture2D" uid="uid://cuvj26mw1tt7m" path="res://resources/textures/Enemy/BringerOfDeath/Bringer-of-Death-SpritSheet.png" id="1_h672h"]
[ext_resource type="PackedScene" uid="uid://6qsaq4c7hwg3" path="res://src/utilities/hit_box.tscn" id="2_l0epl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc8a6"]
size = Vector2(18.247, 52.1815)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdpeh"]
atlas = ExtResource("1_h672h")
region = Rect2(0, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnb4o"]
atlas = ExtResource("1_h672h")
region = Rect2(140, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag53v"]
atlas = ExtResource("1_h672h")
region = Rect2(280, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g30f"]
atlas = ExtResource("1_h672h")
region = Rect2(420, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbrqn"]
atlas = ExtResource("1_h672h")
region = Rect2(560, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx72a"]
atlas = ExtResource("1_h672h")
region = Rect2(700, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_uovwy"]
atlas = ExtResource("1_h672h")
region = Rect2(840, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_6075j"]
atlas = ExtResource("1_h672h")
region = Rect2(980, 558, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikg10"]
atlas = ExtResource("1_h672h")
region = Rect2(0, 651, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqky5"]
atlas = ExtResource("1_h672h")
region = Rect2(140, 651, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhv77"]
atlas = ExtResource("1_h672h")
region = Rect2(280, 651, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_msslg"]
atlas = ExtResource("1_h672h")
region = Rect2(420, 651, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_wek6a"]
atlas = ExtResource("1_h672h")
region = Rect2(560, 651, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbr2u"]
atlas = ExtResource("1_h672h")
region = Rect2(700, 651, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ip7p"]
atlas = ExtResource("1_h672h")
region = Rect2(840, 651, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xilu"]
atlas = ExtResource("1_h672h")
region = Rect2(980, 651, 140, 93)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwgtr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdpeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnb4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag53v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbrqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx72a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uovwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6075j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikg10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqky5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhv77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msslg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wek6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbr2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ip7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xilu")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_3snv5"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nto8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ngo1a"]
_data = {
"Attack": SubResource("Animation_3snv5"),
"RESET": SubResource("Animation_nto8g")
}

[node name="BringerOfDeathSpell" type="Area2D"]
position = Vector2(0, -26)
scale = Vector2(1.4, 1.184)
script = ExtResource("1_g20cl")

[node name="HitBox" parent="." instance=ExtResource("2_l0epl")]

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-2.86213e-07, 0.0916939)
shape = SubResource("RectangleShape2D_yc8a6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.98023e-08, -25.4459)
scale = Vector2(1, 1.127)
sprite_frames = SubResource("SpriteFrames_jwgtr")
animation = &"Attack"
frame = 9
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ngo1a")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false

[node name="FreeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.33
autostart = true

[connection signal="timeout" from="FreeTimer" to="." method="_on_free_timer_timeout"]

[editable path="HitBox"]
